# llm-driven-clinical-study-analysis

./: .gitignore  README.md  project_journal.md  pyproject.toml  shell.nix
ClinicalRAG/: .env.example
ClinicalRAG/app/: quadrant_vdb.py
ClinicalRAG/app/chunking/: splitter.py
ClinicalRAG/app/embeddings/: embedder.py
ClinicalRAG/config/: settings.py
ClinicalRAG/docker/: docker-compose.yml
ClinicalRAG/script/: scrape_literatures.py
extra_materials/: API_SETUP.md  DOCKER_GUIDE.md  Exploring_LLMs.md  QUICK_REFERENCE.md  TESTING_STRATEGY.md
extra_materials/PART_1/: intro_to_language_modeling.ipynb
extra_materials/PART_2/: gaza_genocide.txt  tokenization.ipynb
literature_analysis/: preprocess.py  retrieve_literature.py  scrape_literatures.py
llm4ehr/: .dockerignore  .env.example  pyproject.toml  requirements.txt
llm4ehr/app/: main.py
llm4ehr/app/api/dependencies/: deps.py
llm4ehr/app/api/v1/endpoints/: __init__.py  chat_routes.py  fetch_routes.py  indexing_routes.py  jobs_routes.py  ollama_model_routes.py  retrieval_routes.py  routes.py
llm4ehr/app/core/: config.py
llm4ehr/app/db/: activate_model.py  crud.py  qdrant_client.py  quadrant_client.py  sqlite.py
llm4ehr/app/db/tables/: active_models.py  document.py
llm4ehr/app/fetcher/: __init__.py  article_fetcher.py
llm4ehr/app/rag/: pipeline.py  pipeline_remote.py
llm4ehr/app/rag/chunking/: splitter.py
llm4ehr/app/rag/embeddings/: embedder.py
llm4ehr/app/rag/ingestion/: ingestion.py
llm4ehr/app/rag/llm/: chat_model.py  ollama_chat_model.py  remote_chat_model.py
llm4ehr/app/rag/prompts/: system_prompt.py
llm4ehr/app/rag/reranking/: reranker.py
llm4ehr/app/rag/retrieval/: query.py
llm4ehr/app/rag/services/: __init__.py  chat_service.py  fetch_service.py  indexing_service.py  ingestion_service.py  ollama_service.py  retrieval_service.py  scrape_service.py
llm4ehr/app/research/: paper_fetcher.py
llm4ehr/app/schemas/: chat_schema.py  fetch_schema.py  indexing_schema.py  ingestion_schema.py  ollama_models_schema.py  paper_schema.py  query.py  query_schema.py  retrieval_schema.py  scrape_schema.py  source_document_schema.py
llm4ehr/app/scrapper/: article_scrapper.py
llm4ehr/docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  backend.def  docker-compose.yml  frontend.def  myimage.def  qdrant.def  run-containers.sbatch
llm4ehr/frontend/: next.config.mjs  pnpm-lock.yaml
llm4ehr/frontend/app/: globals.css  layout.tsx  page.tsx
llm4ehr/frontend/app/settings/: page.tsx
llm4ehr/frontend/components/: chat-interface.tsx  context-sidebar.tsx  header.tsx
llm4ehr/frontend/components/settings/: context-section.tsx  embedding-model-section.tsx  hosted-models-section.tsx  local-models-section.tsx  model-management-section.tsx  model-source-section.tsx  parameters-section.tsx
llm4ehr/scripts/: scrape_literatures.py
llm4ehr/tests/: app_test.py  embedding_test.py  llm_chat_test.py  query_test.py  quick_test.py  rag_test.py  test_chat_service.py  test_embedder.py  test_ingestion_service.py  test_query_service.py  test_rag_pipeline.py
llm_retro_study/backend/: pyproject.toml
study logs/: intro_to_language_modeling.ipynb
study logs/PART_1/: intro_to_language_modeling.ipynb
study logs/PART_2/: test.ipynb  tokenization.ipynb
(+1 files in other folders)
