[project]
name = "llm-driven-clinical-study-analysis"
version = "0.1.0"
description = "LLM-driven clinical study analysis"
authors = [
    {name = "Crazz-Zaac"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pyeuropepmc (>=1.14.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pdfminer-six (>=20260107,<20260108)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "spacy (>=3.8.11,<4.0.0)",
    "scispacy (>=0.6.2,<0.7.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "pymupdf4llm (>=0.3.4,<0.4.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-huggingface (>=1.2.1,<2.0.0)",
    "fastapi (>=0.104.1,<1.0.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
]

[project.optional-dependencies]
dev = [
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "pytest-asyncio (>=0.21.0,<1.0.0)",
    "pytest-mock (>=3.11.1,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
