[project]
name = "llm-retro-study"
version = "0.1.0"
description = ""
authors = [
    {name = "rabin bk",email = "rabinbk588@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "sqlmodel (>=0.0.33,<0.0.34)",
    "fastapi (>=0.129.0,<0.130.0)"
]

[tool.poetry]
packages = [{include = "llm_retro_study", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
